Working Patrol Enemy Complete

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -112,7 +112,6 @@ LastLevel=/Game/Maps/ArenaMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/EnemySpawner.EnemySpawner
 
 [RootWindow]
 ScreenPosition=X=464.000 Y=7.000
@@ -1995,6 +1994,41 @@ REINST_EnemyCharacter_Patrol_C_113.Actor=True
 REINST_EnemyCharacter_Patrol_C_113.Input=True
 REINST_EnemyCharacter_Patrol_C_113.None=True
 REINST_EnemyCharacter_Patrol_C_113.BaseCharacter=True
+REINST_EnemyPatrolAi_C_65.Tick=True
+REINST_EnemyPatrolAi_C_65.AI=True
+REINST_EnemyPatrolAi_C_65.Controller=True
+REINST_EnemyPatrolAi_C_65.Rendering=True
+REINST_EnemyPatrolAi_C_65.Replication=True
+REINST_EnemyPatrolAi_C_65.Actor=True
+REINST_EnemyPatrolAi_C_65.Input=True
+REINST_EnemyCharacter_Patrol_C_89.Character=True
+REINST_EnemyCharacter_Patrol_C_89.Tick=True
+REINST_EnemyCharacter_Patrol_C_89.Camera=True
+REINST_EnemyCharacter_Patrol_C_89.Pawn=True
+REINST_EnemyCharacter_Patrol_C_89.Rendering=True
+REINST_EnemyCharacter_Patrol_C_89.Replication=True
+REINST_EnemyCharacter_Patrol_C_89.Actor=True
+REINST_EnemyCharacter_Patrol_C_89.Input=True
+REINST_EnemyCharacter_Patrol_C_89.None=True
+REINST_EnemyCharacter_Patrol_C_89.BaseCharacter=True
+EnemyCharacter_Patrol_C.Character Movement (General Settings)=True
+EnemyCharacter_Patrol_C.Character Movement: Walking=True
+EnemyCharacter_Patrol_C.Character Movement: Jumping / Falling=True
+EnemyCharacter_Patrol_C.Character Movement (Networking)=True
+EnemyCharacter_Patrol_C.Character Movement: Swimming=True
+EnemyCharacter_Patrol_C.Character Movement: Flying=True
+EnemyCharacter_Patrol_C.Character Movement: Custom Movement=True
+EnemyCharacter_Patrol_C.Character Movement (Rotation Settings)=True
+EnemyCharacter_Patrol_C.Character Movement: Physics Interaction=True
+EnemyCharacter_Patrol_C.Character Movement=True
+EnemyCharacter_Patrol_C.Character Movement: Avoidance=True
+EnemyCharacter_Patrol_C.RootMotion=True
+EnemyCharacter_Patrol_C.Character Movement: NavMesh Movement=True
+EnemyCharacter_Patrol_C.NavMovement=True
+EnemyCharacter_Patrol_C.Velocity=True
+EnemyCharacter_Patrol_C.PlanarMovement=True
+EnemyCharacter_Patrol_C.MovementComponent=True
+EnemyCharacter_Patrol_C.Activation=True
 
 [MRU]
 MRUItem0=/Game/Maps/ArenaMap
@@ -2104,6 +2138,8 @@ BoolProperty=K2Node_VariableGet.DefaultValueCategory.None,
 FloatProperty=K2Node_VariableGet.DefaultValueCategory.None,
 EnemySpawner_C=K2Node_VariableGet.DefaultValueCategory.None,
 IntProperty=K2Node_VariableGet.DefaultValueCategory.None,
+ObjectProperty=K2Node_VariableGet.DefaultValueCategory.None,
+StructProperty=K2Node_VariableGet.DefaultValueCategory.None,
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2179,13 +2215,14 @@ EnemyCharacter_Patrol_C=
 REINST_EnemyCharacter_Patrol_C_45="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 REINST_EnemyCharacter_C_53="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 EnemySpawner_C=
+REINST_EnemyCharacter_Patrol_C_217="\"Object.Actor.Tags\" "
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/EnemyCharacter_Patrol
 MRUItem1=/Game/Blueprints/EnemyPatrolAi
-MRUItem2=/Game/Blueprints/EnemySpawner
-MRUItem3=/Game/Blueprints/TwinStickMode
-MRUItem4=/Game/Maps/ArenaMap
+MRUItem2=/Game/Maps/ArenaMap
+MRUItem3=/Game/Blueprints/EnemySpawner
+MRUItem4=/Game/Blueprints/TwinStickMode
 MRUItem5=/Game/Blueprints/EnemyCharacter
 MRUItem6=/Game/Blueprints/Projectile_Patrol
 MRUItem7=/Game/Materials/ProjectileMat_Enemy
@@ -2389,7 +2426,7 @@ FloorScale=1.000000
 FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [CascadeEditor]
 LightDir=P=-44.999969 Y=-179.999969 R=0.000000
