Set up generic enemy type

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1931,6 +1931,51 @@ EnemyAi_Chase_C.Controller=True
 EnemyAi_Chase_C.Replication=True
 EnemyAi_Chase_C.Actor=True
 EnemyAi_Chase_C.Input=True
+EnemyCharacter_Chase_C.LOD=True
+EnemyCharacter_Chase_C.Cooking=True
+EnemyCharacter_Chase_C.TransformCommon=True
+EnemyCharacter_Chase_C.Animation=True
+EnemyCharacter_Chase_C.Mesh=True
+EnemyCharacter_Chase_C.ComponentTick=True
+EnemyCharacter_Chase_C.Clothing=True
+EnemyCharacter_Chase_C.Physics=True
+EnemyCharacter_Chase_C.Collision=True
+EnemyCharacter_Chase_C.ClothingSimulation=True
+EnemyCharacter_Chase_C.Lighting=True
+EnemyCharacter_Chase_C.Tags=True
+EnemyCharacter_Chase_C.ComponentReplication=True
+EnemyCharacter_Chase_C.Activation=True
+EnemyCharacter_Chase_C.Variable=True
+EnemyCharacter_Chase_C.Character Movement (General Settings)=True
+EnemyCharacter_Chase_C.Character Movement: Walking=True
+EnemyCharacter_Chase_C.Character Movement: Jumping / Falling=True
+EnemyCharacter_Chase_C.Character Movement (Networking)=True
+EnemyCharacter_Chase_C.Character Movement: Swimming=True
+EnemyCharacter_Chase_C.Character Movement: Flying=True
+EnemyCharacter_Chase_C.Character Movement: Custom Movement=True
+EnemyCharacter_Chase_C.Character Movement (Rotation Settings)=True
+EnemyCharacter_Chase_C.Character Movement: Physics Interaction=True
+EnemyCharacter_Chase_C.Character Movement=True
+EnemyCharacter_Chase_C.Character Movement: Avoidance=True
+EnemyCharacter_Chase_C.RootMotion=True
+EnemyCharacter_Chase_C.Character Movement: NavMesh Movement=True
+EnemyCharacter_Chase_C.NavMovement=True
+EnemyCharacter_Chase_C.Velocity=True
+EnemyCharacter_Chase_C.PlanarMovement=True
+EnemyCharacter_Chase_C.MovementComponent=True
+EnemyCharacter_Chase_C.Shape=True
+EnemyCharacter_Chase_C.Navigation=True
+EnemyCharacter_Chase_C.Materials=True
+REINST_EnemyCharacter_Chase_C_116.Default=True
+REINST_EnemyCharacter_Chase_C_116.Tick=True
+REINST_EnemyCharacter_Chase_C_116.Character=True
+REINST_EnemyCharacter_Chase_C_116.Camera=True
+REINST_EnemyCharacter_Chase_C_116.Pawn=True
+REINST_EnemyCharacter_Chase_C_116.Rendering=True
+REINST_EnemyCharacter_Chase_C_116.Replication=True
+REINST_EnemyCharacter_Chase_C_116.Actor=True
+REINST_EnemyCharacter_Chase_C_116.Input=True
+REINST_EnemyCharacter_Chase_C_116.BaseCharacter=True
 
 [MRU]
 MRUItem0=/Game/Maps/ArenaMap
@@ -2037,6 +2082,7 @@ Projectile_C=K2Node_VariableGet.DefaultValueCategory.None,
 FloatProperty=K2Node_VariableGet.DefaultValueCategory.None,
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,
 BoolProperty=K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2078,11 +2124,11 @@ SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.Respons
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Shape.ShapeColor\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 HeroCharacter_C="\"Object.Actor.Tags\" "
-BaseCharacter=
-Character=
-Pawn=
+BaseCharacter="\"Object.Default.EnemyColor\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+Character="\"Object.Default.EnemyColor\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+Pawn="\"Object.Default.EnemyColor\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 REINST_HeroCharacter_C_364="\"Object.Actor.Tags\" "
-EnemyCharacter_C=
+EnemyCharacter_C="\"Object.Default.EnemyColor\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 ProgressBar="\"Object.Appearance.FillColorAndOpacity\" "
 Widget=
 Visual=
@@ -2108,33 +2154,34 @@ ParticleModuleLocationPrimitiveBase="\"Object.Location.StartRadius.Distribution\
 ParticleModuleLocationBase="\"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
 Explosion_C=
 Projectile_C="\"Object.Damage\" \"Object.Damage\" "
-EnemyCharacter_Chase_C="\"Object.Actor.Tags\" "
+EnemyCharacter_Chase_C="\"Object.Default.EnemyColor\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride\" "
 LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" \"Object.GridSnapping.Pow2GridSizes\" \"Object.GridSnapping.CommonRotGridSizes\" \"Object.GridSnapping.DivisionsOf360RotGridSizes\" \"Object.GridSnapping.ScalingGridSizes\" "
 SkeletalMeshEditorSettings="\"Object.AnimationPreview.AnimPreviewLightingDirection\" "
 BoxComponent="\"Object.Shape.ShapeColor\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+REINST_EnemyCharacter_Chase_C_116="\"Object.Default.EnemyColor\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Enemies/EnemyCharacter
-MRUItem1=/Game/Blueprints/Enemies/EnemyAi_Chase
-MRUItem2=/Game/Blueprints/TwinStickMode
+MRUItem0=/Game/Blueprints/Enemies/EnemyCharacter_Chase
+MRUItem1=/Game/Blueprints/Enemies/EnemyCharacter
+MRUItem2=/Game/Blueprints/Enemies/ElementalType
 MRUItem3=/Game/Maps/ArenaMap
-MRUItem4=/Game/Blueprints/Enemies/EnemyAi
-MRUItem5=/Game/Blueprints/Enemies/ElementalType
-MRUItem6=/Game/Blueprints/EnemyCharacter
-MRUItem7=/Game/Blueprints/Interactables/BP_BaseItem
-MRUItem8=/Game/Blueprints/Interactables/BPI_Interact
-MRUItem9=/Game/Blueprints/Interactables/BP_BaseInteractable
-MRUItem10=/Game/Blueprints/EnemyCharacter_Chase
-MRUItem11=/Game/Blueprints/Explosion
-MRUItem12=/Game/Blueprints/HeroCharacter
-MRUItem13=/Game/StarterContent/Particles/LaserSparks
-MRUItem14=/Game/FPWeapon/Textures/T_FPGun_AO
-MRUItem15=/Game/FPWeapon/Textures/UE4_Mannequin_occlusion_Mobile
-MRUItem16=/Game/FPWeapon/Textures/T_FPGun_N
-MRUItem17=/Game/FPWeapon/Textures/T_FPGun_M
-MRUItem18=/Game/Blueprints/Weapon
-MRUItem19=/Game/Blueprints/Projectile
+MRUItem4=/Game/Blueprints/Enemies/EnemySpawner
+MRUItem5=/Game/Blueprints/Enemies/EnemyAi_Chase
+MRUItem6=/Game/Blueprints/TwinStickMode
+MRUItem7=/Game/Blueprints/Enemies/EnemyAi
+MRUItem8=/Game/Blueprints/EnemyCharacter
+MRUItem9=/Game/Blueprints/Interactables/BP_BaseItem
+MRUItem10=/Game/Blueprints/Interactables/BPI_Interact
+MRUItem11=/Game/Blueprints/Interactables/BP_BaseInteractable
+MRUItem12=/Game/Blueprints/EnemyCharacter_Chase
+MRUItem13=/Game/Blueprints/Explosion
+MRUItem14=/Game/Blueprints/HeroCharacter
+MRUItem15=/Game/StarterContent/Particles/LaserSparks
+MRUItem16=/Game/FPWeapon/Textures/T_FPGun_AO
+MRUItem17=/Game/FPWeapon/Textures/UE4_Mannequin_occlusion_Mobile
+MRUItem18=/Game/FPWeapon/Textures/T_FPGun_N
+MRUItem19=/Game/FPWeapon/Textures/T_FPGun_M
 
 [AssetEditorToolkitTabLocation]
 /Game/AnimationAssets/Jog_Lt_Rifle.Jog_Lt_Rifle=0
@@ -2174,6 +2221,8 @@ MRUItem19=/Game/Blueprints/Projectile
 /Game/Blueprints/Enemies/EnemyAi.EnemyAi=1
 /Game/Blueprints/Enemies/EnemyCharacter.EnemyCharacter=0
 /Game/Blueprints/Enemies/EnemyAi_Chase.EnemyAi_Chase=1
+/Game/Blueprints/Enemies/EnemyCharacter_Chase.EnemyCharacter_Chase=1
+/Game/Blueprints/Enemies/EnemySpawner.EnemySpawner=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -2345,5 +2394,8 @@ MapSkeletalMotionToRoot=False
 PropertyEditorToolkit_PinAsColumnHeader=24.000000
 Property=0.500000
 Value=1.000000
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
 
 
