Added to Generic Enemy and fixing bugs.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -86,6 +86,7 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
+NewWindowPosition=(X=315,Y=143)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -143,7 +144,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Enemies
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -199,7 +200,7 @@ ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
 
 [Directories2]
-UNR=../../../../../../Users/jomar/Documents/Unreal Projects/CAP4053/Content/Maps
+UNR=../../../../../Documents/Unreal Projects/CAP4053/Content/Maps
 BRUSH=../../../../../../Users/Matthew Kurtz/Documents/Unreal Projects/TwinStickShooter/Content/
 FBX=../../../../../../Users/Matthew Kurtz/Documents/Unreal Projects/TwinStickShooter/Content/
 FBXAnim=../../../../../../Users/Matthew Kurtz/Documents/Unreal Projects/TwinStickShooter/Content/
@@ -855,8 +856,8 @@ MovieSceneCapture.TimeStamp=2019.01.25-16.09.41
 MovieSceneCapture.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2019.01.09-03.22.08
 SequencerWidgets.LastCompileMethod=Unknown
-HierarchicalLODUtilities.TimeStamp=2019.01.09-03.22.01
-HierarchicalLODUtilities.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2019.01.25-16.01.43
+HierarchicalLODUtilities.LastCompileMethod=External
 TextureEditor.TimeStamp=2019.01.09-03.22.10
 TextureEditor.LastCompileMethod=Unknown
 Cascade.TimeStamp=2019.01.09-03.21.56
@@ -1485,7 +1486,7 @@ K2Node_VariableGet.DefaultValueCategory=True
 K2Node_VariableGet.Events=True
 ObjectProperty.Variable=True
 ObjectProperty.DefaultValueCategory=True
-StructProperty.Variable=False
+StructProperty.Variable=True
 StructProperty.DefaultValueCategory=True
 EnemyCharacter_C.Default=True
 EnemyAi_C.Tick=True
@@ -1976,6 +1977,99 @@ REINST_EnemyCharacter_Chase_C_116.Replication=True
 REINST_EnemyCharacter_Chase_C_116.Actor=True
 REINST_EnemyCharacter_Chase_C_116.Input=True
 REINST_EnemyCharacter_Chase_C_116.BaseCharacter=True
+REINST_EnemyCharacter_C_128.Character=True
+REINST_EnemyCharacter_C_128.Tick=True
+REINST_EnemyCharacter_C_128.Camera=True
+REINST_EnemyCharacter_C_128.Pawn=True
+REINST_EnemyCharacter_C_128.Rendering=True
+REINST_EnemyCharacter_C_128.Replication=True
+REINST_EnemyCharacter_C_128.Actor=True
+REINST_EnemyCharacter_C_128.Input=True
+REINST_EnemyCharacter_C_128.None=True
+REINST_EnemyCharacter_C_128.BaseCharacter=True
+Projectile_Enemy_C.Tick=True
+Projectile_Enemy_C.Default=True
+Projectile_Enemy_C.Rendering=True
+Projectile_Enemy_C.Replication=True
+Projectile_Enemy_C.Actor=True
+Projectile_Enemy_C.Input=True
+ArrayProperty.Variable=True
+ArrayProperty.DefaultValueCategory=True
+Projectile_Patrol_C.Tick=True
+Projectile_Patrol_C.Default=True
+Projectile_Patrol_C.Rendering=True
+Projectile_Patrol_C.Replication=True
+Projectile_Patrol_C.Actor=True
+Projectile_Patrol_C.Input=True
+EnemyCharacter_Patrol_C.Character=True
+EnemyCharacter_Patrol_C.Tick=True
+EnemyCharacter_Patrol_C.Camera=True
+EnemyCharacter_Patrol_C.Pawn=True
+EnemyCharacter_Patrol_C.Rendering=True
+EnemyCharacter_Patrol_C.Replication=True
+EnemyCharacter_Patrol_C.Actor=True
+EnemyCharacter_Patrol_C.Input=True
+EnemyCharacter_Patrol_C.Default=True
+EnemyCharacter_Patrol_C.BaseCharacter=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+REINST_EnemyAi_Chase_C_219.Tick=True
+REINST_EnemyAi_Chase_C_219.AI=True
+REINST_EnemyAi_Chase_C_219.Controller=True
+REINST_EnemyAi_Chase_C_219.Rendering=True
+REINST_EnemyAi_Chase_C_219.Replication=True
+REINST_EnemyAi_Chase_C_219.Actor=True
+REINST_EnemyAi_Chase_C_219.Input=True
+EnemyPatrolAi_C.Tick=True
+EnemyPatrolAi_C.AI=True
+EnemyPatrolAi_C.Controller=True
+EnemyPatrolAi_C.Replication=True
+EnemyPatrolAi_C.Actor=True
+EnemyPatrolAi_C.Input=True
+K2Node_SwitchString.PinOptions=True
+StrProperty.Variable=True
+StrProperty.DefaultValueCategory=True
+EnemyAi_C.Default=True
+REINST_EnemyAi_C_268.Tick=True
+REINST_EnemyAi_C_268.AI=True
+REINST_EnemyAi_C_268.Controller=True
+REINST_EnemyAi_C_268.Rendering=True
+REINST_EnemyAi_C_268.Replication=True
+REINST_EnemyAi_C_268.Actor=True
+REINST_EnemyAi_C_268.Input=True
+REINST_EnemyAi_C_268.None=True
+REINST_EnemyAi_C_272.Tick=True
+REINST_EnemyAi_C_272.AI=True
+REINST_EnemyAi_C_272.Controller=True
+REINST_EnemyAi_C_272.Rendering=True
+REINST_EnemyAi_C_272.Replication=True
+REINST_EnemyAi_C_272.Actor=True
+REINST_EnemyAi_C_272.Input=True
+REINST_EnemyAi_C_272.None=True
+REINST_EnemyAi_C_276.Tick=True
+REINST_EnemyAi_C_276.AI=True
+REINST_EnemyAi_C_276.Controller=True
+REINST_EnemyAi_C_276.Rendering=True
+REINST_EnemyAi_C_276.Replication=True
+REINST_EnemyAi_C_276.Actor=True
+REINST_EnemyAi_C_276.Input=True
+REINST_EnemyAi_C_276.None=True
+REINST_EnemyAi_C_280.Tick=True
+REINST_EnemyAi_C_280.AI=True
+REINST_EnemyAi_C_280.Controller=True
+REINST_EnemyAi_C_280.Rendering=True
+REINST_EnemyAi_C_280.Replication=True
+REINST_EnemyAi_C_280.Actor=True
+REINST_EnemyAi_C_280.Input=True
+REINST_EnemyAi_C_280.None=True
+REINST_EnemyAi_C_284.Tick=True
+REINST_EnemyAi_C_284.AI=True
+REINST_EnemyAi_C_284.Controller=True
+REINST_EnemyAi_C_284.Rendering=True
+REINST_EnemyAi_C_284.Replication=True
+REINST_EnemyAi_C_284.Actor=True
+REINST_EnemyAi_C_284.Input=True
+REINST_EnemyAi_C_284.None=True
 
 [MRU]
 MRUItem0=/Game/Maps/ArenaMap
@@ -2073,16 +2167,21 @@ WmfMediaSettings=InputSettings.Bindings.AxisMappings.LookRight,InputSettings.Bin
 PostProcessVolume=PostProcessVolume.Lens.Lens,
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,
-EnemyCharacter_C=K2Node_VariableGet.DefaultValueCategory.None,
+EnemyCharacter_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 BaseCharacter=K2Node_VariableGet.DefaultValueCategory.None,
 TwinStickMode_C=K2Node_VariableGet.DefaultValueCategory.None,
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Points,ParticleModuleColorOverLife.Color.OutVal,
 Explosion_C=K2Node_VariableGet.DefaultValueCategory.None,
-Projectile_C=K2Node_VariableGet.DefaultValueCategory.None,
+Projectile_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 FloatProperty=K2Node_VariableGet.DefaultValueCategory.None,
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,
-BoolProperty=K2Node_VariableGet.DefaultValueCategory.None,
+BoolProperty=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,
+Projectile_Enemy_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
+ArrayProperty=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
+StructProperty=K2Node_VariableGet.DefaultValueCategory.None,
+ObjectProperty=K2Node_VariableGet.DefaultValueCategory.None,
+EnemyCharacter_Patrol_C=K2Node_VariableGet.DefaultValueCategory.None,
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2114,21 +2213,21 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent="\"Object.Shape.ShapeColor\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Shape.ShapeColor\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent=
+SceneComponent=
 ActorComponent=
 SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Shape.ShapeColor\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 HeroCharacter_C="\"Object.Actor.Tags\" "
-BaseCharacter="\"Object.Default.EnemyColor\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
-Character="\"Object.Default.EnemyColor\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
-Pawn="\"Object.Default.EnemyColor\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+BaseCharacter=
+Character=
+Pawn=
 REINST_HeroCharacter_C_364="\"Object.Actor.Tags\" "
-EnemyCharacter_C="\"Object.Default.EnemyColor\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+EnemyCharacter_C=
 ProgressBar="\"Object.Appearance.FillColorAndOpacity\" "
 Widget=
 Visual=
@@ -2153,35 +2252,41 @@ ParticleModuleLocationPrimitiveSphere="\"Object.Location.StartRadius.Distributio
 ParticleModuleLocationPrimitiveBase="\"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
 ParticleModuleLocationBase="\"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
 Explosion_C=
-Projectile_C="\"Object.Damage\" \"Object.Damage\" "
+Projectile_C=
 EnemyCharacter_Chase_C="\"Object.Default.EnemyColor\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride\" "
 LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" \"Object.GridSnapping.Pow2GridSizes\" \"Object.GridSnapping.CommonRotGridSizes\" \"Object.GridSnapping.DivisionsOf360RotGridSizes\" \"Object.GridSnapping.ScalingGridSizes\" "
 SkeletalMeshEditorSettings="\"Object.AnimationPreview.AnimPreviewLightingDirection\" "
 BoxComponent="\"Object.Shape.ShapeColor\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_EnemyCharacter_Chase_C_116="\"Object.Default.EnemyColor\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+REINST_EnemyCharacter_C_128="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+EnemyCharacter_Patrol_C=
+K2Node_SwitchString="\"Object.PinOptions.PinNames\" "
+K2Node_Switch="\"Object.PinOptions.PinNames\" "
+K2Node="\"Object.PinOptions.PinNames\" "
+EdGraphNode=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Enemies/EnemyCharacter_Chase
-MRUItem1=/Game/Blueprints/Enemies/EnemyCharacter
-MRUItem2=/Game/Blueprints/Enemies/ElementalType
-MRUItem3=/Game/Maps/ArenaMap
+MRUItem0=/Game/Blueprints/Enemies/EnemyCharacter
+MRUItem1=/Game/Blueprints/EnemyCharacter_Patrol
+MRUItem2=/Game/Blueprints/EnemyPatrolAi
+MRUItem3=/Game/Blueprints/Enemies/EnemyAi
 MRUItem4=/Game/Blueprints/Enemies/EnemySpawner
-MRUItem5=/Game/Blueprints/Enemies/EnemyAi_Chase
-MRUItem6=/Game/Blueprints/TwinStickMode
-MRUItem7=/Game/Blueprints/Enemies/EnemyAi
-MRUItem8=/Game/Blueprints/EnemyCharacter
-MRUItem9=/Game/Blueprints/Interactables/BP_BaseItem
-MRUItem10=/Game/Blueprints/Interactables/BPI_Interact
-MRUItem11=/Game/Blueprints/Interactables/BP_BaseInteractable
-MRUItem12=/Game/Blueprints/EnemyCharacter_Chase
-MRUItem13=/Game/Blueprints/Explosion
-MRUItem14=/Game/Blueprints/HeroCharacter
-MRUItem15=/Game/StarterContent/Particles/LaserSparks
-MRUItem16=/Game/FPWeapon/Textures/T_FPGun_AO
-MRUItem17=/Game/FPWeapon/Textures/UE4_Mannequin_occlusion_Mobile
-MRUItem18=/Game/FPWeapon/Textures/T_FPGun_N
-MRUItem19=/Game/FPWeapon/Textures/T_FPGun_M
+MRUItem5=/Game/Maps/ArenaMap
+MRUItem6=/Game/Blueprints/Enemies/EnemyAi_Chase
+MRUItem7=/Game/Blueprints/Projectile_Enemy
+MRUItem8=/Game/Blueprints/Projectile
+MRUItem9=/Game/Blueprints/Projectile_Patrol
+MRUItem10=/Game/Blueprints/Enemies/EnemyCharacter_Chase
+MRUItem11=/Game/Blueprints/Enemies/ElementalType
+MRUItem12=/Game/Blueprints/TwinStickMode
+MRUItem13=/Game/Blueprints/EnemyCharacter
+MRUItem14=/Game/Blueprints/Interactables/BP_BaseItem
+MRUItem15=/Game/Blueprints/Interactables/BPI_Interact
+MRUItem16=/Game/Blueprints/Interactables/BP_BaseInteractable
+MRUItem17=/Game/Blueprints/EnemyCharacter_Chase
+MRUItem18=/Game/Blueprints/Explosion
+MRUItem19=/Game/Blueprints/HeroCharacter
 
 [AssetEditorToolkitTabLocation]
 /Game/AnimationAssets/Jog_Lt_Rifle.Jog_Lt_Rifle=0
@@ -2223,6 +2328,10 @@ MRUItem19=/Game/FPWeapon/Textures/T_FPGun_M
 /Game/Blueprints/Enemies/EnemyAi_Chase.EnemyAi_Chase=1
 /Game/Blueprints/Enemies/EnemyCharacter_Chase.EnemyCharacter_Chase=1
 /Game/Blueprints/Enemies/EnemySpawner.EnemySpawner=1
+/Game/Blueprints/Projectile_Enemy.Projectile_Enemy=1
+/Game/Blueprints/Projectile_Patrol.Projectile_Patrol=1
+/Game/Blueprints/EnemyCharacter_Patrol.EnemyCharacter_Patrol=1
+/Game/Blueprints/EnemyPatrolAi.EnemyPatrolAi=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -2324,6 +2433,7 @@ NodeTemplateCacheCapMB=20.000000
 HeroCharacter_C.Actor=True
 HeroCharacter_C.Replication=True
 HeroCharacter_C.Tick=True
+ObjectProperty.Variable=True
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -2376,7 +2486,7 @@ FloorScale=1.000000
 FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [CascadeEditor]
 LightDir=P=-44.999969 Y=-179.999969 R=0.000000
