Charger, Patrol, Swarm, Explosive

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -144,7 +144,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Enemies
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2070,6 +2070,60 @@ REINST_EnemyAi_C_284.Replication=True
 REINST_EnemyAi_C_284.Actor=True
 REINST_EnemyAi_C_284.Input=True
 REINST_EnemyAi_C_284.None=True
+REINST_EnemyAi_C_66.Tick=True
+REINST_EnemyAi_C_66.AI=True
+REINST_EnemyAi_C_66.Controller=True
+REINST_EnemyAi_C_66.Rendering=True
+REINST_EnemyAi_C_66.Replication=True
+REINST_EnemyAi_C_66.Actor=True
+REINST_EnemyAi_C_66.Input=True
+REINST_EnemyAi_C_66.None=True
+REINST_EnemyAi_C_70.Tick=True
+REINST_EnemyAi_C_70.AI=True
+REINST_EnemyAi_C_70.Controller=True
+REINST_EnemyAi_C_70.Rendering=True
+REINST_EnemyAi_C_70.Replication=True
+REINST_EnemyAi_C_70.Actor=True
+REINST_EnemyAi_C_70.Input=True
+REINST_EnemyAi_C_70.None=True
+REINST_EnemyAi_C_84.Tick=True
+REINST_EnemyAi_C_84.AI=True
+REINST_EnemyAi_C_84.Controller=True
+REINST_EnemyAi_C_84.Rendering=True
+REINST_EnemyAi_C_84.Replication=True
+REINST_EnemyAi_C_84.Actor=True
+REINST_EnemyAi_C_84.Input=True
+REINST_EnemyAi_C_84.None=True
+REINST_EnemyAi_C_92.Tick=True
+REINST_EnemyAi_C_92.AI=True
+REINST_EnemyAi_C_92.Controller=True
+REINST_EnemyAi_C_92.Rendering=True
+REINST_EnemyAi_C_92.Replication=True
+REINST_EnemyAi_C_92.Actor=True
+REINST_EnemyAi_C_92.Input=True
+REINST_EnemyAi_C_92.None=True
+ByteProperty.Variable=True
+ByteProperty.DefaultValueCategory=True
+REINST_EnemyCharacter_C_444.Character=True
+REINST_EnemyCharacter_C_444.Tick=True
+REINST_EnemyCharacter_C_444.Camera=True
+REINST_EnemyCharacter_C_444.Pawn=True
+REINST_EnemyCharacter_C_444.Rendering=True
+REINST_EnemyCharacter_C_444.Replication=True
+REINST_EnemyCharacter_C_444.Actor=True
+REINST_EnemyCharacter_C_444.Input=True
+REINST_EnemyCharacter_C_444.None=True
+REINST_EnemyCharacter_C_444.BaseCharacter=True
+REINST_EnemyCharacter_C_454.Character=True
+REINST_EnemyCharacter_C_454.Tick=True
+REINST_EnemyCharacter_C_454.Camera=True
+REINST_EnemyCharacter_C_454.Pawn=True
+REINST_EnemyCharacter_C_454.Rendering=True
+REINST_EnemyCharacter_C_454.Replication=True
+REINST_EnemyCharacter_C_454.Actor=True
+REINST_EnemyCharacter_C_454.Input=True
+REINST_EnemyCharacter_C_454.None=True
+REINST_EnemyCharacter_C_454.BaseCharacter=True
 
 [MRU]
 MRUItem0=/Game/Maps/ArenaMap
@@ -2166,22 +2220,26 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings.LookRight,InputSettings
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.LookRight,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings.MoveDown,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,
 PostProcessVolume=PostProcessVolume.Lens.Lens,
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
-K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 EnemyCharacter_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 BaseCharacter=K2Node_VariableGet.DefaultValueCategory.None,
 TwinStickMode_C=K2Node_VariableGet.DefaultValueCategory.None,
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Points,ParticleModuleColorOverLife.Color.OutVal,
 Explosion_C=K2Node_VariableGet.DefaultValueCategory.None,
 Projectile_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
-FloatProperty=K2Node_VariableGet.DefaultValueCategory.None,
+FloatProperty=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,
 BoolProperty=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
-K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 Projectile_Enemy_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 ArrayProperty=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 StructProperty=K2Node_VariableGet.DefaultValueCategory.None,
 ObjectProperty=K2Node_VariableGet.DefaultValueCategory.None,
 EnemyCharacter_Patrol_C=K2Node_VariableGet.DefaultValueCategory.None,
+ByteProperty=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
+EnemyAi_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
+CharacterMovementComponent=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
+StrProperty=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2223,11 +2281,11 @@ SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.Respons
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Shape.ShapeColor\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 HeroCharacter_C="\"Object.Actor.Tags\" "
-BaseCharacter=
-Character=
-Pawn=
+BaseCharacter="\"Object.isDead\" \"Object.isDead\" "
+Character="\"Object.isDead\" \"Object.isDead\" "
+Pawn="\"Object.isDead\" \"Object.isDead\" "
 REINST_HeroCharacter_C_364="\"Object.Actor.Tags\" "
-EnemyCharacter_C=
+EnemyCharacter_C="\"Object.isDead\" \"Object.isDead\" "
 ProgressBar="\"Object.Appearance.FillColorAndOpacity\" "
 Widget=
 Visual=
@@ -2264,29 +2322,32 @@ EnemyCharacter_Patrol_C=
 K2Node_SwitchString="\"Object.PinOptions.PinNames\" "
 K2Node_Switch="\"Object.PinOptions.PinNames\" "
 K2Node="\"Object.PinOptions.PinNames\" "
-EdGraphNode=
+EdGraphNode="\"Object.PinOptions.PinNames\" "
+EnemyAi_C=
+AIController=
+Controller=
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/Enemies/EnemyCharacter
-MRUItem1=/Game/Blueprints/EnemyCharacter_Patrol
-MRUItem2=/Game/Blueprints/EnemyPatrolAi
-MRUItem3=/Game/Blueprints/Enemies/EnemyAi
-MRUItem4=/Game/Blueprints/Enemies/EnemySpawner
-MRUItem5=/Game/Maps/ArenaMap
-MRUItem6=/Game/Blueprints/Enemies/EnemyAi_Chase
-MRUItem7=/Game/Blueprints/Projectile_Enemy
-MRUItem8=/Game/Blueprints/Projectile
-MRUItem9=/Game/Blueprints/Projectile_Patrol
-MRUItem10=/Game/Blueprints/Enemies/EnemyCharacter_Chase
-MRUItem11=/Game/Blueprints/Enemies/ElementalType
-MRUItem12=/Game/Blueprints/TwinStickMode
-MRUItem13=/Game/Blueprints/EnemyCharacter
-MRUItem14=/Game/Blueprints/Interactables/BP_BaseItem
-MRUItem15=/Game/Blueprints/Interactables/BPI_Interact
-MRUItem16=/Game/Blueprints/Interactables/BP_BaseInteractable
-MRUItem17=/Game/Blueprints/EnemyCharacter_Chase
-MRUItem18=/Game/Blueprints/Explosion
-MRUItem19=/Game/Blueprints/HeroCharacter
+MRUItem1=/Game/Blueprints/Enemies/EnemyAi
+MRUItem2=/Game/Blueprints/Enemies/ElementalType
+MRUItem3=/Game/StarterContent/Particles/LaserSparks
+MRUItem4=/Game/Blueprints/Projectile
+MRUItem5=/Game/Blueprints/Projectile_Enemy
+MRUItem6=/Game/Maps/ArenaMap
+MRUItem7=/Game/Blueprints/EnemyCharacter_Patrol
+MRUItem8=/Game/Blueprints/EnemyPatrolAi
+MRUItem9=/Game/Blueprints/Enemies/EnemySpawner
+MRUItem10=/Game/Blueprints/Enemies/EnemyAi_Chase
+MRUItem11=/Game/Blueprints/Projectile_Patrol
+MRUItem12=/Game/Blueprints/Enemies/EnemyCharacter_Chase
+MRUItem13=/Game/Blueprints/TwinStickMode
+MRUItem14=/Game/Blueprints/EnemyCharacter
+MRUItem15=/Game/Blueprints/Interactables/BP_BaseItem
+MRUItem16=/Game/Blueprints/Interactables/BPI_Interact
+MRUItem17=/Game/Blueprints/Interactables/BP_BaseInteractable
+MRUItem18=/Game/Blueprints/EnemyCharacter_Chase
+MRUItem19=/Game/Blueprints/Explosion
 
 [AssetEditorToolkitTabLocation]
 /Game/AnimationAssets/Jog_Lt_Rifle.Jog_Lt_Rifle=0
@@ -2332,6 +2393,7 @@ MRUItem19=/Game/Blueprints/HeroCharacter
 /Game/Blueprints/Projectile_Patrol.Projectile_Patrol=1
 /Game/Blueprints/EnemyCharacter_Patrol.EnemyCharacter_Patrol=1
 /Game/Blueprints/EnemyPatrolAi.EnemyPatrolAi=1
+/Game/StarterContent/Particles/LaserSparks.LaserSparks=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
